--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@
 
 
   <!-- External -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.extensions.min.js" integrity="sha256-pwVO9xs/zTEUDEzK1G4AbAAZbAzmU30SniNu2b9O0UY=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -87,7 +87,7 @@
       }
     }
   </script>
-  <!-- <canvas id="pts">
+    <!-- <canvas id="pts">
     background: linear-gradient(
 to bottom,
 var(--green),
@@ -97,41 +97,37 @@ var(--purple)
 );
     </canvas> -->
 
-  <!-- <div id="pts"></div> -->
-
-  <div id="fullpage" class="j-fullpage">
-    <div id="overlay"></div>
-    <div id="section-1" class="section hero-section">
-      <h1 class="quote">- As you sow, so shall you reap. -</h1>
-      <div class="hero-center">
-        <h1 class="hero-text">Hi, I am curious <span class="hero-span" data-text="Julian">Julian</span>.</h1>
-        <h1 class="hero-text">Also, I am a software engineer.</h1>
+      <div id="fullpage" class="j-fullpage">
+        <div id="section-1" class="section hero-section">
+          <h1 class="quote">- As you sow, so shall you reap. -</h1>
+          <div class="hero-center">
+            <h1 class="hero-text">Hi, I am curious <span class="hero-span" data-text="Julian">Julian</span>.</h1>
+            <h1 class="hero-text">Also, I am a software engineer.</h1>
+          </div>
+          <a href="#" class="hero-button">
+            <span></span><span></span><span></span>Tell me more
+          </a>
+        </div>
+        <div id="section-2" class="section">
+          <div class="section-content-wrapper">
+            <h2 class="section-title">About</h2>
+            <div class="swiper-container"></div>
+          </div>
+        </div>
+        <div id="section-3" class="section">
+          <div class="section-content-wrapper">
+            <h2 class="section-title">Projects</h2>
+            <div class="swiper-container"></div>
+          </div>
+        </div>
+        <div id="section-4" class="section">
+          <div class="section-content-wrapper">
+            <h2 class="section-title">Say Hi!</h2>
+            <div class="swiper-container"></div>
+          </div>
+        </div>
       </div>
-      <a href="#" class="hero-button">
-        <span></span><span></span><span></span>Tell me more
-      </a>
-    </div>
-    <div id="section-2" class="section">
-      <div class="section-content-wrapper">
-        <h2 class="section-title">About</h2>
-        <div class="swiper-container"></div>
-      </div>
-    </div>
-    <div id="section-3" class="section">
-      <div class="section-content-wrapper">
-        <h2 class="section-title">Projects</h2>
-        <div class="swiper-container"></div>
-      </div>
-    </div>
-    <div id="section-4" class="section">
-      <div class="section-content-wrapper">
-        <h2 class="section-title">Say Hi!</h2>
-        <div class="swiper-container"></div>
-      </div>
-    </div>
-  </div>
   <script type="text/javascript">
-    let fullPage_wrapper = document.getElementById("fullpage");
     new fullpage('#fullpage', {
       anchors: ['home', 'aboutMe', 'myProjects', 'contactMe'],
       autoScrolling: true,
@@ -141,15 +137,9 @@ var(--purple)
       licenseKey: 'C!23WKA!h2',
       easing: 'easeInOutCubic',
       keyboardScrolling: true,
-      // normalScrollElements: '#overlay',
-      onLeave: function(origin, destination, direction) {
-        let newPosition = destination.item.offsetTop;
-        docStyle.setProperty('--overlay-position',  Math.round(newPosition)+'px')
-      },
-
     });
   </script>
-  <!-- <script src="https://unpkg.com/swiper/js/swiper.min.js"></script> -->
+  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script>
     var mySwiper = new Swiper('.swiper-container', {
       // Optional parameters
